@@ -63,6 +63,7 @@ tmm.trailer=Trailer
 tmm.subtitles=Subtitles
 tmm.update.title=Check for update
 tmm.update.message=A new update has been found.\nDo you want to update?
+tmm.java6=You are using Java6. Please update to a newer Java version!\nStarting with version 2.7 tinyMediaManager does not support Java6 anymore!
 tmm.registeredto=Registered to:
 tmm.registerdonator=Register for donator version
 tmm.registerdonator.error=There was a problem registering your version.\nRegistering your donation in our system may take a while. Please try again in a few minutes.
